hphp/hack/test/typecheck/classname/typename_no_new.php.exp
File "typename_no_new.php", line 13, characters 14-15:
Was expecting a class, but got a string (Typing[4026])
